# XMLEditor

./: CmakeLists.txt  main.cpp
Application/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Parser/: CMakeLists.txt
